@@ -19,6 +19,7 @@ export(createTargetWeights)
 export(filterTargets)
 export(filterVcfBasic)
 export(filterVcfMuTect)
+export(filterVcfMuTect2)
 export(findBestNormal)
 export(findFocal)
 export(getDiploid)
