@@ -8,8 +8,10 @@ test_calculateBamCoverageByInterval <- function() {
         interval.file=interval.file, output.file="ex1_coverage.txt")
     
     checkEquals(c(20.95205,43.78357,21.29271), coverage$average.coverage, tolerance=0.01)
+    checkEquals(c(610,1158,636), coverage$counts, tolerance=0.01)
     x <- readCoverageFile("ex1_coverage.txt")
     checkEquals(c(20.95205,43.78357,21.29271), x$average.coverage, tolerance=0.01)
+    checkEquals(c(610,1158,636), x$counts, tolerance=0.01)
     gc.gene.file <- system.file("extdata", "example_gc.gene.file.txt", 
         package = "PureCN")
     checkException(correctCoverageBias(x, gc.gene.file))
